fast-api-temerlio-managing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-manager-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-manager-app
  template:
    metadata:
      labels:
        app: temporal-manager-app
    spec:
      containers:
        - name: temporal-manager-app
          image: ghcr.io/amarouane-abdelhak/temporalio-manager:1.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
