fast-api-temerlio-managing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: temporal-api
spec:
  selector:
    app: temporal-manager-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
